frontend/src/components/budget/budget.css
.budget-page {
  display: flex;
  width: 100%;
  height: 100%;
  overflow: scroll;
}

.new-budget {
  font-size: 45px;
  font-weight: 600;
  cursor: pointer;
  align-self: flex-start;
}

.budget-form-box {
  overflow-y: auto;
  margin: 80px 0px 80px 40px;
  border-radius: 10px;
  min-width: 300px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  background: rgb(238, 236, 236);
  padding: 50px 30px;
  height: 100vh;
  box-shadow: 5px 8px 12px black;
  border-right: 1px solid black;
  position: relative;
  /* display: none; */
}

#budget-form-title {
  margin-top: 15px;
  font-size: 35px;
  padding: 20px 49px 10px;
}

#budget-amount {
  width: 260px;
  border: none;
  background-color: rgb(238, 236, 236);
  border-bottom: 1px solid black;
  padding: 5px;
  margin: 15px 10px;
  transition: border-bottom .3s;
}

#budget-amount:focus {
  border-bottom: 1px solid rgb(112, 58, 240);
}

#budget-description {
  width: 260px;
  border: none;
  background-color: rgb(238, 236, 236);
  border-bottom: 1px solid black;
  padding: 5px;
  margin: 10px 10px;
  transition: border-bottom .3s;
}

#budget-description:focus {
  border-bottom: 1px solid rgb(112, 58, 240);
}

#budget-date {
  width: 260px;
  border: none;
  border-bottom: 1px solid black;
  padding: 5px;
  margin: 10px 10px;
  transition: border-bottom .3s;
}

#budget-date:focus {
  border-bottom: 1px solid rgb(112, 58, 240);
}

#budget-date:hover {
  border-bottom: 1px solid rgb(112, 58, 240);
}

#budget-select {
  width: 270px;
  height: 30px;
  margin: 10px 10px;
  background-color: rgb(206, 203, 203);
  cursor: pointer;
  transition: border .3s;
}

#budget-select:hover {
  border: 1px solid rgb(112, 58, 240);
}

#budget-dropdown-first {
  color: red;
  opacity: 0.5;
}

.budget-list-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.budget-list-container {
  width: 70%;
  background: rgb(238, 236, 236);
  padding: 10px 50px 50px;
  margin: 50px;
  box-shadow: -8px 8px 12px black;
  border-radius: 8px;
}

#budget-submit {
  margin: 9px;
  width: 270px;
  height: 30px;
  padding: 3px;
  border-radius: 5px;
  transition: background-color .5s;
}

#budget-submit:hover {
  background-color: rgb(206, 203, 203);
  border-color: rgb(177, 174, 174);
}

#budget-list-title {
  font-size: 30px;
  padding: 20px 0px;
  width: 100%;
  text-align: center;
  border-bottom: 1px solid black;
}

#budget-list {
  margin-top: 20px;
  width: 100%;
}

.budget-list-item-box {
  width: 100%;
  height: 51px;
  display: flex;
  justify-content: center;
}

.budget-list-item-box p {
  display: flex;
  justify-content: center;
  width: 150px;
  max-height: 40px;
  overflow: scroll;
  padding: 16px 8px 8px;
  border: 1px solid black;
}

.budget-list-item-box label {
  display: flex;
  justify-content: center;
  width: 150px;
  max-height: 40px;
  overflow: scroll;
  padding: 16px 8px 8px;
  border: 1px solid black;
}

#budget-list-date {
  text-align: center;
  padding-bottom: 0px;
  padding-top: 16px;
}

.budget-list-top {
  width: 100%;
  height: 50px;
  display: flex;
  justify-content: center;
}

.budget-list-top p {
  display: flex;
  justify-content: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  width: 150px;
  padding: 16px 8px 8px;
  border: 1px solid black;
}

#budget-item-change {
  cursor: pointer;
}

#budget-item-change:hover {
  background-color: darkgray;
}

#budget-item-delete-button {
  background-color: rgb(238, 236, 236);
  border: none;
}

#budget-item-delete-button:hover {
  background-color: darkgray;
}

::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
}

